docs/examples/docker-registry/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: kubernetes-dashboard
  namespace: docker-registry
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - httpbin.123sou.cn
    secretName: kubernetes-dashboard-certs
  rules:
  - host: httpbin.123sou.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry
            port:
              number: 5000
